tests/snapshot/error/source_locations/expression/assign_op/get_property.js
var obj = {
  get foo() {
    throw new Error();
  }
};

obj['fo' + 'o'] += 1;