tests/snapshot/error/source_locations/expression/assign_op/get_property.exp
Error: 
  ┌ source_locations/expression/assign_op/get_property.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at get foo (source_locations/expression/assign_op/get_property.js:3:11)
  at <global> (source_locations/expression/assign_op/get_property.js:7:4)